fix image jumpy thingy

--- a/src/routes/ornament_img.css
+++ b/src/routes/ornament_img.css
@@ -56,7 +56,7 @@ img {
 		box-shadow: var(--shadow);
 
 		img {
-			/* height: 100%; */
+			height: 36px;
 			width: 36px;
 		}
 
